--- a/src/app/component/exercise/exercise.html
+++ b/src/app/component/exercise/exercise.html
@@ -21,10 +21,11 @@
     
   <tbody *ngFor="let exercise of exercises">
       <tr>
-          <td>{{exercise.name}}</td>
-          <td>{{exercise.description}}</td>
-          <td>{{exercise.sets}}</td>
-          <td>{{exercise.reps}}</td>
+          <td><input [ngClass]="!exercise.edit_delete? 'exercicse-text-input': ''" type="text" value={{exercise.name}} [disabled]="!exercise.edit_delete"></td>
+          <td><input [ngClass]="!exercise.edit_delete? 'exercicse-text-input': ''" type="text" value={{exercise.description}} [disabled]="!exercise.edit_delete"></td>
+          <td><input [ngClass]="!exercise.edit_delete? 'exercicse-text-input': ''" type="text" value={{exercise.sets}} [disabled]="!exercise.edit_delete"></td>
+          <td><input [ngClass]="!exercise.edit_delete? 'exercicse-text-input': ''" type="text" value={{exercise.reps}} [disabled]="!exercise.edit_delete"></td>
+          
           <td>
               <input type="button" value="Edit" class="btn btn-primary" (click)="exercise.edit_delete = !exercise.edit_delete" *ngIf="!exercise.edit_delete">
               <input type="button" value="Save" class="btn btn-primary" (click)="exercise.edit_delete = !exercise.edit_delete" *ngIf="exercise.edit_delete">
