made all display elements for workout / exercise components into input fields

--- a/src/app/component/workout/workout.html
+++ b/src/app/component/workout/workout.html
@@ -8,13 +8,16 @@
   <div *ngFor="let workout of workouts" style="margin-top: 25px;">
     <div class="panel panel-default">
       
-      <div class="panel-heading bg-secondary text-white" style="cursor: pointer;" (click)="workout.expanded = !workout.expanded">
-          <h1 style="margin-left: 10px">{{workout.name}}</h1>
+      <div class="panel-heading bg-secondary text-white" style="cursor: pointer;" (click)="!workout.edit_delete && workout.expanded = !workout.expanded">
+            
+          <h1 style="margin-left: 10px;"><label *ngIf="workout.edit_delete" style="margin-right: 5px;">Name: </label><input [ngClass]="!workout.edit_delete? 'exercise-text-input text-white': ''" type="text" value={{workout.name}} [disabled]="!workout.edit_delete" style="margin-top: 5px;"></h1>
       </div> 
       
       <div class="panel-body bg-light" *ngIf="workout.expanded">
-        <h4>{{workout.description}}</h4>
-        <div class="workout-excercise-list">
+        
+        
+        <h4 style="margin-left: 10px;"><label *ngIf="workout.edit_delete" style="margin-right: 5px;">Description: </label><input [ngClass]="!workout.edit_delete? 'exercise-text-input': ''" type="text" value={{workout.description}} [disabled]="!workout.edit_delete" style="margin-top: 5px;"></h4>
+        <div class="workout-excercise-list" style="margin-left: 10px;">
             <exercise [exercises]=workout.exercises></exercise>
         </div>
       </div>
