--- a/src/app/component/exercise/exercise.html
+++ b/src/app/component/exercise/exercise.html
@@ -5,7 +5,7 @@
 </form>
 
 <div class="exercise-list">
-    <table class="table table-striped table-hover">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <td>Name</td>
@@ -21,10 +21,10 @@
     
   <tbody *ngFor="let exercise of exercises">
       <tr>
-          <td><input [ngClass]="!exercise.edit_delete? 'exercicse-text-input': ''" type="text" value={{exercise.name}} [disabled]="!exercise.edit_delete"></td>
-          <td><input [ngClass]="!exercise.edit_delete? 'exercicse-text-input': ''" type="text" value={{exercise.description}} [disabled]="!exercise.edit_delete"></td>
-          <td><input [ngClass]="!exercise.edit_delete? 'exercicse-text-input': ''" type="text" value={{exercise.sets}} [disabled]="!exercise.edit_delete"></td>
-          <td><input [ngClass]="!exercise.edit_delete? 'exercicse-text-input': ''" type="text" value={{exercise.reps}} [disabled]="!exercise.edit_delete"></td>
+          <td><input [ngClass]="!exercise.edit_delete? 'exercise-text-input': ''" type="text" value={{exercise.name}} [disabled]="!exercise.edit_delete"></td>
+          <td><input [ngClass]="!exercise.edit_delete? 'exercise-text-input': ''" type="text" value={{exercise.description}} [disabled]="!exercise.edit_delete"></td>
+          <td><input [ngClass]="!exercise.edit_delete? 'exercise-text-input': ''" type="text" value={{exercise.sets}} [disabled]="!exercise.edit_delete"></td>
+          <td><input [ngClass]="!exercise.edit_delete? 'exercise-text-input': ''" type="text" value={{exercise.reps}} [disabled]="!exercise.edit_delete"></td>
           
           <td>
               <input type="button" value="Edit" class="btn btn-primary" (click)="exercise.edit_delete = !exercise.edit_delete" *ngIf="!exercise.edit_delete">
