--- a/src/app/component/calendar/day/day.html
+++ b/src/app/component/calendar/day/day.html
@@ -4,7 +4,5 @@
       <h5 class="pull-left">{{day?.dayOfMonth}}</h5>
     </div>
   </div>
-  <div class="col pointer meal" *ngFor="let meal of meals" (click)="showMeal(meal)"
-    [ngClass]="{'breakfast tiger-fill': isBreakFast(meal), 'lunch seafoam-fill': isLunch(meal), 'dinner lavender-fill': isDinner(meal), 'snack mint-fill': isSnack(meal)}"
-    >{{getMealDisplay(meal)}}</div>
+  <div class="col pointer meal" *ngFor="let workout of workouts" (click)="show(workout)">{{workout.name}}</div>
 </div>
