--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <navbar></navbar>
+<modal></modal>
+<calendar></calendar>
 <div class="container-fluid main">
   <router-outlet></router-outlet>
 </div>
