--- a/src/app/component/accountSignup/accountSignup.html
+++ b/src/app/component/accountSignup/accountSignup.html
@@ -1,1 +1,59 @@
 HERE is my signup page
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src=accountSignup.component.ts></script>
+    <style>
+        .center-block {
+            float: none;
+        }
+    </style>
+</head>
+
+<body>
+    <h2 class="text-center">Welcome!
+        <h2>
+            <br>
+            <form [formGroup]="signUp" ngSubmit="signUp()">
+                <div class="row">
+                    <div class="col ml-5">
+                        <input formControlName="firstName" type="text" class="form-control" placeholder="First name" required>
+                    </div>
+                    <div class="col mr-5">
+                        <input formControlName="lastName" type="text" class="form-control" placeholder="Last name" required>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col ml-5">
+                        <input formControlName="email" type="text" class="form-control" placeholder="Email" required>
+                    </div>
+                    <div class="col mr-5">
+                        <input formControlName="username" type="text" class="form-control" placeholder="Username" required>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col ml-5">
+                        <input formControlName="pWord" type="text" class="form-control" placeholder="Password" required>
+                    </div>
+                    <div class="col mr-5">
+                        <input formControlName="vPWord" type="text" class="form-control" placeholder="Verify Password" required>
+                    </div>
+                </div>
+                <br>
+                <div class="col-md-12 text-center">
+                    <button id="singlebutton" name="singlebutton" class="btn btn-primary" type="submit">Sign Me Up!</button>
+                </div>
+            </form>
+</body>
+
+</html>
