--- a/src/app/component/workout/workout.html
+++ b/src/app/component/workout/workout.html
@@ -28,10 +28,9 @@
                                         <label id="{{'w_label1_' + workout._id}}" style="margin-right: 5px;" class="hidden">Name:
                                         </label>
                                         <input id="{{'w_name_' + workout._id}}" class="exercise-text-input" type="text"
-                                            value={{workout.name}} [disabled]="true" style="margin-top: 5px; margin-bottom: 5px;">
+                                            value={{workout.name}} [disabled]="true" style="margin-top: 5px; margin-bottom: 5px;" [(ngModel)]="workout.name">
                                     </h2>
-                                    
-                                        <!-- Order verification, and authorization -->
+                                
                                     <div id="{{'w_color_' + workout._id}}" class="hidden" style="margin-left: 40px;">
                                         <label>Color: 
                                             <input type="button" value="" class="btn" style="background-color: #6c086d; margin-left: 5px; width:20px; height: 20px;" (click)="updateColor(workout, '#6c086d')">
@@ -61,7 +60,7 @@
                                 <label id="{{'w_label2_' + workout._id}}" style="margin-right: 5px;" class="hidden">Description:
                                 </label>
                                 <input id="{{'w_desc_' + workout._id}}" class="exercise-text-input" type="text" value={{workout.description}}
-                                    [disabled]="true" style="margin-top: 5px;">
+                                    [disabled]="true" style="margin-top: 5px;" [(ngModel)]="workout.description">
                             </h4>
                             <div class="workout-excercise-list" style="margin-left: 10px;">
                                 <exercise [workout]=workout></exercise>
