--- a/src/app/component/workout/workout.html
+++ b/src/app/component/workout/workout.html
@@ -6,7 +6,6 @@
             <input type="button" value="+" class="btn btn-primary" (click)="add()" style="margin-left: 10px; width: 4%;">
         </div>
 
-
         <div class="workout-list">
             <div *ngFor="let workout of workouts;" style="margin-top: 25px;">
                 <div class="panel panel-default" id="{{'w_collapse' + workout._id}}">
@@ -14,35 +13,44 @@
                     <a data-toggle="collapse" href="{{'#collapse_' + workout._id}}" style="cursor: pointer;" role="button"
                         aria-expanded="false" id="{{'w_collapse_' + workout._id}}">
                         <div [ngStyle]="{'background-color': workout.color}" class="panel-heading text-white form-inline">
-                            
-                                <h1 style="margin-left: 10px;">
-                                        <label id="{{'w_label_' + workout._id}}">{{workout.name}}</label>
-                                    </h1>
+
+                            <h1 style="margin-left: 10px;">
+                                <label id="{{'w_label_' + workout._id}}">{{workout.name}}</label>
+                            </h1>
 
                         </div>
                     </a>
 
                     <div class="collapse" id="{{'collapse_' + workout._id}}">
                         <div class="form-inline">
-                                <h2 style="margin-left: 10px;">
-                                        <label id="{{'w_label1_' + workout._id}}" style="margin-right: 5px;" class="hidden">Name:
-                                        </label>
-                                        <input id="{{'w_name_' + workout._id}}" class="exercise-text-input" type="text"
-                                            value={{workout.name}} [disabled]="true" style="margin-top: 5px; margin-bottom: 5px;" 
-                                            [(ngModel)]="workout.name" [ngModelOptions]="{standalone: true}">
-                                    </h2>
-                                
-                                    <div id="{{'w_color_' + workout._id}}" class="hidden" style="margin-left: 40px;">
-                                        <label>Color: 
-                                            <input type="button" value="" class="btn" style="background-color: #6c086d; margin-left: 5px; width:20px; height: 20px;" (click)="updateColor(workout, '#6c086d')">
-                                            <input type="button" value="" class="btn" style="background-color: #1d61ae; margin-left: 5px; width:20px; height: 20px;" (click)="updateColor(workout, '#1d61ae')">
-                                            <input type="button" value="" class="btn" style="background-color: #319a2d; margin-left: 5px; width:20px; height: 20px;" (click)="updateColor(workout, '#319a2d')">
-                                            <input type="button" value="" class="btn" style="background-color: #c91010; margin-left: 5px; width:20px; height: 20px;" (click)="updateColor(workout, '#c91010')">
-                                            <input type="button" value="" class="btn" style="background-color: #f2d042; margin-left: 5px; width:20px; height: 20px;" (click)="updateColor(workout, '#f2d042')">
-                                            <input type="button" value="" class="btn" style="background-color: #818181; margin-left: 5px; width:20px; height: 20px;" (click)="updateColor(workout, '#818181')">
-                                        </label>
-                                    </div>
-                                    <!--
+                            <h2 style="margin-left: 10px;">
+                                <label id="{{'w_label1_' + workout._id}}" style="margin-right: 5px;" class="workout-hidden">Name:
+                                </label>
+                                <input id="{{'w_name_' + workout._id}}" class="exercise-text-input" type="text" value={{workout.name}}
+                                    [disabled]="true" style="margin-top: 5px; margin-bottom: 5px;" [(ngModel)]="workout.name"
+                                    [ngModelOptions]="{standalone: true}">
+                            </h2>
+
+                            <div id="{{'w_color_' + workout._id}}" class="workout-hidden" style="margin-left: 40px;">
+                                <label>Color:
+                                    <input type="button" value="" class="btn" style="background-color: #6c086d; margin-left: 5px; width:20px; height: 20px;"
+                                        (click)="updateColor(workout, '#6c086d')" [disabled]="workout.isShared">
+                                    <input type="button" value="" class="btn" style="background-color: #1d61ae; margin-left: 5px; width:20px; height: 20px;"
+                                        (click)="updateColor(workout, '#1d61ae')" [disabled]="workout.isShared">
+                                    <input type="button" value="" class="btn" style="background-color: #319a2d; margin-left: 5px; width:20px; height: 20px;"
+                                        (click)="updateColor(workout, '#319a2d')" [disabled]="workout.isShared">
+                                    <input type="button" value="" class="btn" style="background-color: #c91010; margin-left: 5px; width:20px; height: 20px;"
+                                        (click)="updateColor(workout, '#c91010')" [disabled]="workout.isShared">
+                                    <input type="button" value="" class="btn" style="background-color: #f2d042; margin-left: 5px; width:20px; height: 20px;"
+                                        (click)="updateColor(workout, '#f2d042')" [disabled]="workout.isShared">
+                                    <input type="button" value="" class="btn" style="background-color: #37454E; margin-left: 5px; width:20px; height: 20px;"
+                                        (click)="updateColor(workout, '#37454E')" [disabled]="workout.isShared">
+                                    <input type="button" value="" class="btn" style="background-color: #E3879E; margin-left: 5px; width:20px; height: 20px;"
+                                        (click)="updateColor(workout, '#E3879E')" [disabled]="workout.isShared">
+                                </label>
+                            </div>
+                            <!--
+                                #E3879E
                                     <input type="color" list="presetColors" id="{{'w_color_' + workout._id}}" (change)="updateColor(workout, $event)" class="hidden"
                                      value="{{workout.color}}" style="margin-left: 20px;">
                                     <datalist id="presetColors">
@@ -58,10 +66,11 @@
                         <div class="panel-body bg-light">
 
                             <h4 style="margin-left: 10px;">
-                                <label id="{{'w_label2_' + workout._id}}" style="margin-right: 5px;" class="hidden">Description:
+                                <label id="{{'w_label2_' + workout._id}}" style="margin-right: 5px;" class="workout-hidden">Description:
                                 </label>
                                 <input id="{{'w_desc_' + workout._id}}" class="exercise-text-input" type="text" value={{workout.description}}
-                                    [disabled]="true" style="margin-top: 5px;" [(ngModel)]="workout.description" [ngModelOptions]="{standalone: true}">
+                                    [disabled]="true" style="margin-top: 5px;" [(ngModel)]="workout.description"
+                                    [ngModelOptions]="{standalone: true}">
                             </h4>
                             <div class="workout-excercise-list" style="margin-left: 10px;">
                                 <exercise [workout]=workout></exercise>
@@ -69,18 +78,18 @@
                         </div>
 
                         <div class="panel-footer bg-light text-white" style="overflow: auto; padding: 10px;">
-                            <div  class="clear-fix">
-                                <div id="{{'w_edit_delete_' + workout._id}}" class="float-left">
-                                    <input type="button" value="Edit" class="btn btn-primary" (click)="edit(workout)">
+                            <div class="clear-fix">
+                                <div id="{{'w_edit_delete_' + workout._id}}" class="float-left" *ngIf="!workout.isShared">
+                                    <input type="button" value="Edit" class="btn btn-primary" (click)="edit(workout)" [disabled]="workout.isShared">
                                     <input type="button" value="Delete" class="btn btn-danger" style="margin-left: 10px;"
-                                        (click)="delete(workout)">
+                                        (click)="delete(workout)" [disabled]="workout.isShared">
                                 </div>
-                                <div id="{{'w_save_cancel_' + workout._id}}" class="hidden float-left">
-                                    <input type="button" value="Save" class="btn btn-primary" (click)="save(workout)">
+                                <div id="{{'w_save_cancel_' + workout._id}}" class="workout-hidden float-left" *ngIf="!workout.isShared">
+                                    <input type="button" value="Save" class="btn btn-primary" (click)="save(workout)" [disabled]="workout.isShared">
                                     <input type="button" value="Cancel" class="btn btn-primary" (click)="cancel(workout)"
-                                        style="margin-left: 10px;">
+                                        style="margin-left: 10px;" [disabled]="workout.isShared">
                                 </div>
-                                <div class="float-right" *ngIf="!workout.isShared">
+                                <div class="float-right">
                                     <input type="button" value="Clone" class="btn btn-primary float-right" (click)="clone(workout)">
                                 </div>
                             </div>
