--- a/src/app/component/workoutModal/workoutModal.html
+++ b/src/app/component/workoutModal/workoutModal.html
@@ -1,9 +1,9 @@
 <div id="workout-modal" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <div class="modal-header" [ngStyle]="{'background-color': workout.color}">
+      <div class="modal-header" [ngStyle]="{'background-color': workout?.color}">
         <h2 class="modal-title text-white">{{workout?.name}}</h2>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -13,7 +13,7 @@
             <thead>
             <tr>
               <th>Exercise</th>
-              <th>Rep Scheme</th>
+              <th>Sets X Reps</th>
             </tr>
             </thead>
             <tbody>
