added 'add workout to calendar'

--- a/src/app/component/workoutModal/workoutModal.html
+++ b/src/app/component/workoutModal/workoutModal.html
@@ -1,4 +1,4 @@
-<div id="workout-modal" class="modal" tabindex="-1" role="dialog">
+<div id="workout-modal" class="modal" tabindex="-1" role="dialog">"{{'w_label2_' + workout?._id}}"
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header" [ngStyle]="{'background-color': workout?.color}">
