--- a/src/app/component/shareModal/shareModal.html
+++ b/src/app/component/shareModal/shareModal.html
@@ -1,4 +1,4 @@
-<div id="workout-share-modal" class="modal" tabindex="-1" role="dialog">
+<div id='workout-share-modal' class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header" [ngStyle]="{'background-color': workout?.color}">
@@ -19,12 +19,12 @@
             <tbody>
             <tr *ngFor="let friend of friends">
               <td>{{friend?.firstName}} {{friend?.lastName}} ({{friend?.username}})</td>
-              <td><input type="checkbox" (change)="share(friend?.username, $event.target.checked)"></td>
+              <td><input type="checkbox" (change)="share(friend, $event.target.checked)" 
+                [checked]="isShared(friend)"></td>
             </tr>
             </tbody>
           </table>
         </div>
-        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary">Save changes</button>
